@startuml

title __WEEK7-WEEK7_08.AIRPORT's Class Diagram__\n

  package  {
    class Airplane {
    }
  }
  

  package  {
    class Airplane {
    }
  }
  

  package  {
    class Flight {
    }
  }
  

  package  {
    class Flight {
    }
  }
  

  package  {
    class Main {
    }
  }
  

  package  {
    class Main {
    }
  }
  

  package  {
    class UserInterface {
    }
  }
  

  package  {
    class UserInterface {
    }
  }
  

  Flight o-- Airplane : plane
  Flight o-- Airplane : plane
  UserInterface o-- Airplane : plane
  UserInterface o-- Flight : flight
  UserInterface o-- Airplane : plane
  UserInterface o-- Flight : flight


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
